<resources>
    <string name="app_name">Inzodiac</string>
    <string name="facebook_app_id">1225162574546101</string>
    <string name="server_client_id">AAAAgpniGlk:APA91bGE9h6hTjHKdr5FtFy0HJeKj0y6-yJvv13803qRHhHWdObTmpMJUVS97Arj47MI3c05dznjU6PV-IhUwimqMgLnSZ05axpeevneuySuLNrrmHv9Hrp49sO00KitTInS9SiU06u1</string>
    <string name="continue1">CONTINUE</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signin">SIGN IN</string>
    <string name="full_name">Full Name</string>
    <string name="register">REGISTER</string>
    <string name="verify">VERIFY</string>
    <string name="tell_about_yourself">Tell About Yourself</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="enter_code">Enter code</string>
    <string name="next">NEXT</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="details_about_you">Details About You</string>
    <string name="body_type">Body Type</string>
    <string name="height">Height</string>
    <string name="your_height">Your Height</string>
    <string name="hair_color">Hair Color</string>
    <string name="preferred_horoscope_type">Preferred Horoscope Type</string>
    <string name="eastern">Eastern</string>
    <string name="western">Western</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_drinks">Do You Drinks?</string>
    <string name="do_you_smoke">Do You Smoke?</string>
    <string name="wants_children">Want Children?</string>
    <string name="are_you_married">Are You Married?</string>
    <string name="about_you">About You</string>
    <string name="finish">FINISH</string>
    <string name="last_step_to_complete">Last Step To Complete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="message_options">Message Options</string>
    <string name="permissions_privacy"><![CDATA[Permissions & Privacy]]></string>
    <string name="inzodiac_premium">Inzodiac Premium</string>
    <string name="about">About</string>
    <string name="rate_the_app">Rate The App</string>
    <string name="safety">Safety</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="code_of_conduct">Code of Conduct</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="andrea_sanders">Andrea Sanders</string>
    <string name="about_me">About me</string>
    <string name="my_photos">My Photos</string>
    <string name="preferred_language">Preferred Language</string>
    <string name="hair_style">Hair Style</string>
    <string name="preferred_horoscop_type">Preferred Horoscope Type</string>
    <string name="relationship_status">Relationship Status</string>
    <string name="filter">Filter</string>
    <string name="age">Age</string>
    <string name="intent">Intent</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="update_to_premium">Update To Premium</string>
    <string name="update">UPDATE</string>
    <string name="go_to_payment">GO TO PAYMENT</string>
    <string name="horoscope_for_month">Horoscope for month</string>
    <string name="love_amp_connections"><![CDATA[Love & Connections]]></string>
    <string name="non_binary">Non-Binary</string>
    <string name="orientation">Orientation</string>
    <string name="looking_for">Looking For</string>
    <string name="inzodiac">Inzodiac</string>


    <string name="namerequired">Full Name is required</string>
    <string name="emailrequired">Email is required</string>
    <string name="emailinvalid">Email is Invalid</string>
    <string name="mobilerequired">Mobile No. is required</string>
    <string name="heightrequired">Height is required</string>
    <string name="daterequired">Date of birth is required</string>
    <string name="aboutrequired">About is required</string>
    <string name="lookequired">Please select looking for</string>
    <string name="oriequired">Please select orientation</string>
    <string name="comnamerequired">Height is required</string>
    <string name="mcrequired">MC # is required</string>
    <string name="addressrequired">Address is required</string>
    <string name="truckrequired"># of Truck is required</string>
    <string name="passrequired">Password is required</string>
    <string name="minpassrequired">Minimum 6 digit Password is required</string>
    ///////////////////
    <string name="cant_be_empty">Can\'t be empty</string>
    <string name="check_network">Please check network connection</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="mobile_no">Mobile No.</string>


    <string name="media_picker_select_from">Select From:</string>
    <string name="media_picker_camera">Camera</string>
    <string name="media_picker_gallery">Gallery</string>
    <string name="media_picker_ok">Ok</string>
    <string name="media_picker_cancel">Cancel</string>
    <string name="media_picker_some_permission_is_denied">Some Permission is Denied</string>
    <string name="media_picker_you_need_to_grant_access_to">You need to grant access to</string>
    <string name="media_picker_read_Write_external_storage"><![CDATA[Read & Write External Storage]]></string>
    <string name="search">Search</string>

    <string name="dummy_time">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="years_ago">years ago</string>
    <string name="year_ago">year ago</string>
    <string name="months_ago">months ago</string>
    <string name="month_ago">month ago</string>
    <string name="weeks_ago">weeks ago</string>
    <string name="week_ago">week ago</string>
    <string name="day_ago">day ago</string>
    <string name="hour_ago">hr ago</string>
    <string name="minutes_ago">mins ago</string>
    <string name="seconds_ago">secs ago</string>
    <string name="days_ago">day ago</string>
    <string name="hours_ago">hour ago</string>
    <string name="minute_ago">min ago</string>
    <string name="second_ago">sec ago</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="between">Between 150 (5\'0\") and 219 cm (7\'3\")</string>
    <string name="the_game">The Game</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="send_request">Send Request</string>
    <string name="notification_channel">my_notification_channel1</string>
    <string name="enter_height">Enter Height</string>
    <string name="complicated">Complicated</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="no_never">No-Never</string>
    <string name="maybe_someday">Maybe someday</string>
    <string name="all_grown_up">All Grown Up</string>
    <string name="already_have">Already have</string>
    <string name="never">Never</string>
    <string name="socially">Socially</string>
    <string name="regularly">Regularly</string>
    <string name="n_a">N/A</string>
    <string name="relationship">Relationship</string>
    <string name="exercise">Exercise</string>
    <string name="chinese">Chinese</string>
    <string name="somethingwrong">Something is wrong, please try after sometime</string>
    <string name="distance">Distance</string>
    <string name="religion">Religion</string>
    <string name="pets">Pets</string>
    <string name="my_work">My Work</string>
    <string name="education">Education</string>
    <string name="intrested_in">Interested  In</string>
    <string name="location">Location</string>
    <string name="editprofile">Edit Profile</string>

    <string name="permission_denied">Permission Denied</string>
    <string name="children">Wants children</string>
    <string name="smoke">Smoke</string>
    <string name="drink">Drink</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="alcohol">Alcohol?</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="category">Category</string>
    <string name="notifications">Notifications</string>
    <string name="admob_vedioid">ca-app-pub-3940256099942544/5224354917</string>
</resources>