<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/sc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none"
        tools:context=".ui.activity.loginmodule.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    android:scaleType="fitXY"
                    card_view:srcCompat="@drawable/ic_shape" />

                <RelativeLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp">


                    <ImageView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_centerHorizontal="true"
                        card_view:srcCompat="@drawable/textlogo" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/header"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"

                    >

                    <TextView
                        android:id="@+id/tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/settings"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp" />



                </RelativeLayout>


            </RelativeLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        card_view:srcCompat="@drawable/ic_message"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:text="@string/faq"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="@color/black2"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ll_contactus"
                    android:layout_margin="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_17sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:backgroundTint="#230f64"
                        card_view:srcCompat="@drawable/ic_contactus"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:text="@string/contact_us"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="@color/black2"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llinpp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        card_view:srcCompat="@drawable/ic_premium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:text="@string/inzodiac_premium"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="@color/black2"
                        />
                </LinearLayout>

                //notification
                <LinearLayout
                    android:id="@+id/llnotification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"

                        card_view:srcCompat="@drawable/ic_notification_blue"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:text="@string/notifications"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="@color/black2"
                        />
                </LinearLayout>




                <LinearLayout
                    android:id="@+id/rlabo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        card_view:srcCompat="@drawable/ic_about"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:text="@string/about"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="@color/black2"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ll_rateapp"
                    android:layout_margin="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        card_view:srcCompat="@drawable/ic_rate"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:text="@string/rate_the_app"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="@color/black2"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ll_safety"
                    android:layout_margin="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        card_view:srcCompat="@drawable/ic_safety"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:text="@string/safety"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="@color/black2"
                        />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/rlpp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        card_view:srcCompat="@drawable/ic_privacy"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:text="@string/privacy_policy"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="@color/black2"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        card_view:srcCompat="@drawable/ic_code"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:text="@string/code_of_conduct"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="@color/black2"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        card_view:srcCompat="@drawable/ic_term"/>

                    <TextView
                        android:id="@+id/rltc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:text="@string/terms_conditions"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="@color/black2"
                        />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/rllog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        card_view:srcCompat="@drawable/ic_logout"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:text="@string/logout"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="@color/black2"
                        />
                </LinearLayout>



            </LinearLayout>

        </LinearLayout>
            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:background="@color/white"/>
        </RelativeLayout>

    </ScrollView>
</layout>