<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none"
        tools:context=".ui.activity.loginmodule.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_210sdp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_shape"/>

                <RelativeLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp">

                    <ImageView
                        android:id="@+id/ivback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_60sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_back" />

                    <ImageView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/textlogo" />

                    <TextView
                        android:id="@+id/skip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/skip"
                        android:visibility="visible"
                        android:layout_centerVertical="true"
                        android:layout_margin="@dimen/_15sdp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                </RelativeLayout>


                <TextView
                    android:id="@+id/tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/header"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/last_step_to_complete"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="The more you tell about yourself, the more people will be able to notice you"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />


            </RelativeLayout>




            <androidx.cardview.widget.CardView
                android:id="@+id/card_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_margin="@dimen/_15sdp"
                android:layout_marginTop="45dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="@dimen/_5sdp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="false">

                <EditText
                    android:id="@+id/etabout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/about_you"
                    android:inputType="textMultiLine"
                    android:gravity="start"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorGray"
                    android:textSize="@dimen/_12sdp" />


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/about_you"
                android:visibility="gone"
                android:layout_gravity="end"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/finish"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/purple_btn_bg"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/finish" />


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/ic_pagination_three" />



        </LinearLayout>

    </ScrollView>
</layout>